--- a/CSS - My Site/CSS/styles.css
+++ b/CSS - My Site/CSS/styles.css
@@ -2,19 +2,55 @@ body {
     margin: 0;
     text-align: center;
     font-family: 'Merriweather', serif;
+    color: #40514e;
 }
 
 h1 {
-    margin-top: 0;
+    margin: 50px auto 0 auto;
     font-family: 'Sacramento', cursive;
+    color: lightcoral;
+    font-size: 5.625rem;
+    line-height: 2;
 }
 
 h2 {
     font-family: 'Montserrat', sans-serif;
+    color: lightcoral;
+    font-size: 2.5rem;
+    font-weight: normal;
+    padding-bottom: 10px;
 }
 
 h3 {
     font-family: 'Montserrat', sans-serif;
+    color: #ed4545;
+}
+
+p {
+    line-height: 2;
+}
+
+hr {
+    border: dotted lightcyan 6px;
+    border-bottom: none;
+    width: 4%;
+    margin: 100px auto;
+}
+
+a {
+    color: crimson;
+    font-family: 'Montserrat', sans-serif;
+    margin: 10px 20px;
+    text-decoration: none;
+}
+
+a:hover {
+    color: lightpink;
+}
+
+.intro {
+    width: 30%;
+    margin: auto;
 }
 
 .top-container {
@@ -23,7 +59,16 @@ h3 {
     padding-top: 100px;
 }
 
-.cat {
+.middle-container {
+    margin: 100px 0;
+}
+
+.bottom-container {
+    background-color: lightcoral;
+    padding: 50px 0 20px;
+}
+
+.profile-img {
     height: 150px;
 }
 
@@ -31,14 +76,70 @@ h3 {
     text-decoration: underline;
 }
 
+.skill-row {
+    width: 50%;
+    margin: 100px auto;
+    text-align: left;
+}
+
+.contact-text {
+    width: 40%;
+    margin: 40px auto 60px;
+}
+
+.copyright {
+    color: lightpink;
+    font-size: 0.75rem;
+    padding: 20px 0;
+}
+
 .top-cloud {
     position: absolute;
     right: 300px;
-    top: 50px;
+    top: 40px;
 }
 
 .bottom-cloud {
     position: absolute;
-    left: 300px;
+    left: 250px;
     bottom: 300px;
+}
+
+.java-img {
+    width: 25%;
+    float: left;
+    margin-right: 30px;
+}
+
+.cube-img {
+    width: 25%;
+    float: right;
+    margin-left: 30px;
+}
+
+.btn {
+    background: #ed4545;
+    background-image: -webkit-linear-gradient(top, #ed4545, #cf8484);
+    background-image: -moz-linear-gradient(top, #ed4545, #cf8484);
+    background-image: -ms-linear-gradient(top, #ed4545, #cf8484);
+    background-image: -o-linear-gradient(top, #ed4545, #cf8484);
+    background-image: linear-gradient(to bottom, #ed4545, #cf8484);
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: 'Montserrat', sans-serif;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+}
+
+.btn:hover {
+    background: #eb4696;
+    background-image: -webkit-linear-gradient(top, #eb4696, #e388b9);
+    background-image: -moz-linear-gradient(top, #eb4696, #e388b9);
+    background-image: -ms-linear-gradient(top, #eb4696, #e388b9);
+    background-image: -o-linear-gradient(top, #eb4696, #e388b9);
+    background-image: linear-gradient(to bottom, #eb4696, #e388b9);
+    text-decoration: none;
 }
